# dapi

./: .gitignore  Cargo.toml  Make.toml  dump.rdb
assets/static/templates/: dashboard.html
di-api/: Cargo.toml
di-api/assets/static/: index.html
di-api/assets/static/templates/: index.html  login.html  signup.html  user.html  users.html
di-api/src/: api.rs  context.rs  db.rs  lib.rs  middleware.rs  routes.rs  state.rs  ws.rs
di-api/src/handlers/: auth.rs
di-api/src/routes/: admin.rs  public.rs  user.rs
di-api/src/routes/admin/: dashboard.rs
di-api/src/routes/public/: dashboard.rs
di-cloud/: Cargo.toml
di-cloud/src/: main.rs
di-common/: Cargo.toml
di-common/div-derive/: Cargo.toml
di-common/div-derive/src/: lib.rs
di-common/src/: error.rs  lib.rs  types.rs
di-common/src/auth/: mod.rs
di-common/src/models/: action.rs  fact.rs  item.rs  mod.rs  record.rs  user.rs
di-db/: Cargo.toml  README.md  deploy.sh
di-db/sql/: down.sql  up.sql
di-db/sql/tables/: entryentries.sql  entrytypes.sql  fieldentries.sql  fieldentrylinks.sql  fields.sql  groups.sql  itemfieldlinks.sql  items.sql  recorditemlinks.sql  records.sql  usergrouplinks.sql  userinfo.sql  userrecordlinks.sql  users.sql
di-db/src/: lib.rs  models.rs  pool.rs  query.rs  schema.rs
sql/: up.sql
src/: api.rs  db.rs  error.rs  gql.rs  lib.rs  middleware.rs  models.rs
src/api/: fact.rs  item.rs  record.rs  user.rs
src/models/: fact.rs  item.rs  record.rs  user.rs
