[package]
name = "divt"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"
default-run = "main"

[[bin]]
name="main"
path="./src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
divc={path="../di-common/", optional=false}
divd={path="../di-db/", optional=false}
tide= "*"
async-std={version="*", features=["attributes"], optional=false}
serde = { version = "*", features = ["derive"], optional=false }
serde_json = { version="*", optional=false }
async-graphql-tide= {version="*", optional=true}
async-graphql= {version="*", optional=true}
futures = "*"
uuid = {version = "*", features = ["v4", "serde"]}
chrono = { version = "*", features = ["serde"] }
dotenv = "*"
tide-websockets = "0.1.0"
log = "0.4.13"
pretty_env_logger = "0.4.0"
prometheus = { version = "0.10.0", features = ["process"] }
# opentelemetry = { version = "*", features = ["async-std"] }
# opentelemetry-jaeger = { version = "*", features = ["async-std"] }
# opentelemetry-tide = "*"
# thrift = "*"
# async-sqlx-session = { version = "0.2.0", features = ["pg"] }
# opentelemtry-prometheus = "*"
# tracing = "*"
# tracing-opentelemtry = "*"
# juniper_graphql_ws = { version = "*", optional=true }
# juniper = { version = "*", optional=true }
# async-graphql = { version = "*", optional=true }
# async-graphql-tide = { version = "*", optional = true }
# tide-sqlx = "*"

[features]
default=[]
gql=["async-graphql", "async-graphql-tide"]

