[package]
name = "div_cloud"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto = "*"
rusoto_core = "0.46.0"
rusoto_s3 = "0.46.0"
rusoto_dynamodb = "0.46.0"
dynomite = "*"
rusoto_credential = "0.46.0"
