[package]
name = "divc"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#db={path="../db/"}
dotenv="*"
sqlx = { version = "0.4.2", features = [ "runtime-async-std-native-tls", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }
serde = { version = "*", features = ["derive", "rc"] }
serde_json = "*"
chrono = { version = "*", features = ["serde"] }
uuid = { version = "*", features = ["serde", "v4"] }
argonautica="*"
jsonwebtoken="*"
dynomite = "*"
async-trait = "0.1.42"
#dasp = "*"
