[package]
name = "di-db"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "*", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono", "macros"] }
async-std = {version = "*", features = ["attributes"]}
futures = "*"
uuid = {version = "*", features = ["v4", "serde"]}
chrono = { version = "*", features = ["serde"] }
dotenv = "*"
