[package]
name = "div-derive"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro=true

[dependencies]
syn="*"
quote="*"
nom="*"
serde={version="*", features=["derive"]}
serde_json="*"
dasp="*"
chrono={version="*", features=["serde"]}
rayon="*"
